--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -39,26 +40,31 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
-    implementation 'com.karumi:dexter:6.2.2'
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    implementation 'androidx.core:core-ktx:1.10.0'
     testImplementation 'junit:junit:4.13.2'
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    //https://github.com/dm77/barcodescanner
-    // https://mvnrepository.com/artifact/me.dm7.barcodescanner/zxing
-    implementation("me.dm7.barcodescanner:zxing:1.9.13")
-    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
-    implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+
+
+
+    //Room DB Library
+    def room_version = "2.1.0"
+    //noinspection GradleDependency
+    implementation "androidx.room:room-runtime:$room_version"
+   // kapt "androidx.room:room-compiler:$room_version"
+
+
 
 }
