--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,20 +50,24 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     testImplementation 'junit:junit:4.13.2'
-    implementation platform('com.google.firebase:firebase-bom:32.0.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 
 
+    // firebase
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
 
 
-    //Room DB Library
-    def room_version = "2.1.0"
-    //noinspection GradleDependency
-    implementation "androidx.room:room-runtime:$room_version"
-   // kapt "androidx.room:room-compiler:$room_version"
+
+
+
+
+
+
 
 
 
