--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,42 +48,35 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.core:core-ktx:1.10.1'
+
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+    //for unit testing
+
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'junit:junit:4.13.2'
+
+
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.core:core:1.10.1'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+
+
+
 
 
     // firebase
-    implementation platform('com.google.firebase:firebase-bom:32.0.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database:20.2.1'
-    implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
-
-
-
-    //QR Code Library
-    implementation 'me.dm7.barcodescanner:zbar:1.9.13'
-
-
-    //Room DB Library
-    def room_version = "2.1.0"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-
-
-
-
-    //for scanner
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'org.jetbrains.anko:anko-commons:0.10.1'
-
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.google.firebase:firebase-firestore:24.6.0'
 
 
 
