--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/main_logo"
-        android:label="@drawable/name_logo"
+        android:label="@string/app_name"
         android:roundIcon="@drawable/main_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.BT"
@@ -43,6 +43,8 @@
         <activity
             android:name=".SignupActivity"
             android:exported="false" />
+
+
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
