--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
 
 
+
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
@@ -64,9 +66,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.core:core:1.10.1'
+
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
 
 
@@ -77,6 +81,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.2.1'
     implementation 'com.google.firebase:firebase-auth:22.0.0'
     implementation 'com.google.firebase:firebase-firestore:24.6.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
+
+    implementation 'androidx.core:core:1.10.1'
 
 
 
