--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.core:core-ktx:1.10.1'
-
-
+    implementation 'androidx.core:core-ktx:+'
 
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -78,12 +77,14 @@ dependencies {
 
 
     // firebase
-    implementation 'com.google.firebase:firebase-database:20.2.1'
+    implementation 'com.google.firebase:firebase-database:20.2.2'
     implementation 'com.google.firebase:firebase-auth:22.0.0'
-    implementation 'com.google.firebase:firebase-firestore:24.6.0'
+    implementation 'com.google.firebase:firebase-firestore:24.6.1'
     implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
 
     implementation 'androidx.core:core:1.10.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 
 
