--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.core:core-ktx:+'
+    
+
 
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -84,6 +84,13 @@ dependencies {
 
     implementation 'androidx.core:core:1.10.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
+
 
 
 
